Fix overflows on browser drawer highlights

--- a/src/components/molecules/BlurbWrapper/BlurbWrapper.less
+++ b/src/components/molecules/BlurbWrapper/BlurbWrapper.less
@@ -40,6 +40,7 @@
   }
 
   .content {
+    overflow-x: hidden;
     margin-left: @grid_x_1;
   }
 }
