--- a/src/components/molecules/HighlightTag/HighlightTag.less
+++ b/src/components/molecules/HighlightTag/HighlightTag.less
@@ -4,7 +4,9 @@
   display: flex;
 
   .highlight-tag {
+    display: flex;
     box-shadow: @box_shadow_primary;  
     text-wrap: nowrap;
+    overflow: hidden;
   }
 }
