--- a/src/components/organisms/BrowserHighlightsTab/BrowserHighlightsTab.less
+++ b/src/components/organisms/BrowserHighlightsTab/BrowserHighlightsTab.less
@@ -18,6 +18,12 @@
       display: flex;
       flex-direction: column;
       gap: @grid_x_1;
+      
+      .day-group-blurbs {
+        display: flex;
+        flex-direction: column;
+        gap: @grid_x_2;
+      }
     }
   }
 }
