--- a/src/components/styles/editor/EditorStyles.less
+++ b/src/components/styles/editor/EditorStyles.less
@@ -5,6 +5,10 @@
   font-size: @font_size_small;
   font-family: @font_family_sans;
   font-weight: @font_weight_light;
+
+  &:not(:last-child)  {
+    margin-bottom: @grid_x_1;
+}
 }
 
 .editor-heading-h1 {
